@@ -54,20 +54,18 @@
       <Unit6>
         <Filename Value="Test7.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="152"/>
         <CursorPos X="28" Y="162"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit6>
       <Unit7>
         <Filename Value="Test8.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="98"/>
         <CursorPos X="20" Y="113"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit7>
       <Unit8>
         <Filename Value="Test9.pas"/>
@@ -141,7 +139,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="394"/>
         <CursorPos X="56" Y="411"/>
-        <UsageCount Value="166"/>
+        <UsageCount Value="167"/>
       </Unit17>
       <Unit18>
         <Filename Value="Test18.pas"/>
@@ -149,7 +147,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="83"/>
         <CursorPos X="38" Y="127"/>
-        <UsageCount Value="166"/>
+        <UsageCount Value="167"/>
       </Unit18>
       <Unit19>
         <Filename Value="testApp/TestApplication.pas"/>
@@ -157,7 +155,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="84"/>
         <CursorPos Y="99"/>
-        <UsageCount Value="166"/>
+        <UsageCount Value="167"/>
       </Unit19>
       <Unit20>
         <Filename Value="FBTestApp.pas"/>
@@ -165,7 +163,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="20"/>
         <CursorPos X="28" Y="48"/>
-        <UsageCount Value="166"/>
+        <UsageCount Value="167"/>
       </Unit20>
       <Unit21>
         <Filename Value="Test2.pas"/>
@@ -173,16 +171,15 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="157"/>
         <CursorPos X="16" Y="184"/>
-        <UsageCount Value="115"/>
+        <UsageCount Value="116"/>
       </Unit21>
       <Unit22>
         <Filename Value="Test19.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="440"/>
         <CursorPos X="73" Y="394"/>
-        <UsageCount Value="138"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="139"/>
       </Unit22>
       <Unit23>
         <Filename Value="Test20.pas"/>
@@ -190,16 +187,15 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="182"/>
         <CursorPos Y="147"/>
-        <UsageCount Value="96"/>
+        <UsageCount Value="97"/>
       </Unit23>
       <Unit24>
         <Filename Value="Test21.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="104"/>
         <CursorPos X="31" Y="124"/>
-        <UsageCount Value="64"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="65"/>
       </Unit24>
       <Unit25>
         <Filename Value="TestManager.pas"/>
@@ -210,42 +206,38 @@
       </Unit25>
       <Unit26>
         <Filename Value="../client/FBClientAPI.pas"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="378"/>
         <CursorPos Y="403"/>
         <UsageCount Value="47"/>
-        <Loaded Value="True"/>
       </Unit26>
       <Unit27>
         <Filename Value="../IBUtils.pas"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="13"/>
-        <TopLine Value="1864"/>
-        <CursorPos X="55" Y="1881"/>
-        <UsageCount Value="20"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="1872"/>
+        <CursorPos X="25" Y="1898"/>
+        <UsageCount Value="19"/>
         <Loaded Value="True"/>
       </Unit27>
       <Unit28>
         <Filename Value="../client/FBSQLData.pas"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="254"/>
         <CursorPos X="31" Y="269"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="2447"/>
+          <TopLine Value="2495"/>
           <CursorPos X="30" Y="2464"/>
         </ExtraEditor1>
-        <UsageCount Value="67"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="66"/>
       </Unit28>
       <Unit29>
         <Filename Value="../client/FBMessages.pas"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="365"/>
         <CursorPos Y="390"/>
         <UsageCount Value="29"/>
-        <Loaded Value="True"/>
       </Unit29>
       <Unit30>
         <Filename Value="../IB.pas"/>
@@ -314,7 +306,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="62"/>
         <CursorPos X="3" Y="81"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit39>
       <Unit40>
         <Filename Value="/usr/share/fpcsrc/rtl/unix/dynlibs.inc"/>
@@ -377,7 +369,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="32"/>
         <CursorPos X="15" Y="51"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit48>
       <Unit49>
         <Filename Value="../client/2.5/FB25Transaction.pas"/>
@@ -391,28 +383,28 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="14"/>
         <CursorPos X="49" Y="50"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit50>
       <Unit51>
         <Filename Value="../client/2.5/FB25Events.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="278"/>
         <CursorPos X="33" Y="309"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit51>
       <Unit52>
         <Filename Value="../client/FBBlob.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="31"/>
         <CursorPos X="3" Y="50"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit52>
       <Unit53>
         <Filename Value="../client/2.5/FB25Blob.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="155"/>
         <CursorPos X="3" Y="176"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit53>
       <Unit54>
         <Filename Value="../client/3.0/FB30Blob.pas"/>
@@ -423,19 +415,19 @@
       </Unit54>
       <Unit55>
         <Filename Value="../client/FBArray.pas"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="532"/>
-        <CursorPos X="51" Y="557"/>
+        <TopLine Value="428"/>
+        <CursorPos X="54" Y="442"/>
         <UsageCount Value="14"/>
         <Loaded Value="True"/>
       </Unit55>
       <Unit56>
         <Filename Value="../client/3.0/FB30Array.pas"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="297"/>
         <CursorPos X="1024" Y="327"/>
         <UsageCount Value="13"/>
-        <Loaded Value="True"/>
       </Unit56>
       <Unit57>
         <Filename Value="../client/2.5/FB25Array.pas"/>
@@ -446,17 +438,16 @@
       </Unit57>
       <Unit58>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <EditorIndex Value="7"/>
-        <TopLine Value="1239"/>
-        <CursorPos X="3" Y="1241"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="278"/>
+        <CursorPos X="15" Y="293"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="278"/>
-          <CursorPos X="15" Y="293"/>
+          <TopLine Value="1239"/>
+          <CursorPos X="3" Y="1241"/>
         </ExtraEditor1>
         <UsageCount Value="65"/>
-        <Loaded Value="True"/>
       </Unit58>
       <Unit59>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
@@ -484,7 +475,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="54"/>
         <CursorPos X="8" Y="64"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit62>
       <Unit63>
         <Filename Value="../client/FBActivityMonitor.pas"/>
@@ -498,21 +489,21 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="1308"/>
         <CursorPos Y="1328"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit64>
       <Unit65>
         <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/generic.inc"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="807"/>
         <CursorPos Y="830"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit65>
       <Unit66>
         <Filename Value="../../ibx/design/IBDBReg.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="420"/>
         <CursorPos X="27" Y="441"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit66>
       <Unit67>
         <Filename Value="../changelog"/>
@@ -532,7 +523,7 @@
       <Unit69>
         <Filename Value="../../ibx/dclibx.pas"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit69>
       <Unit70>
         <Filename Value="../../ibx/design/ibgeneratoreditor.pas"/>
@@ -543,7 +534,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="76"/>
         <CursorPos X="6" Y="88"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit70>
       <Unit71>
         <Filename Value="../../fbintf.fb4/changelog"/>
@@ -557,7 +548,7 @@
         <Filename Value="../client/FBClientAPI.pas.rej"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="78" Y="8"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit72>
       <Unit73>
@@ -565,42 +556,42 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="158"/>
         <CursorPos X="5" Y="163"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit73>
       <Unit74>
         <Filename Value="../../fbintf.fb4/client/3.0/FB30ClientAPI.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="629"/>
         <CursorPos X="3" Y="650"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit74>
       <Unit75>
         <Filename Value="../../fbintf.fb4/client/3.0/FB30Array.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="188"/>
         <CursorPos X="26" Y="212"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit75>
       <Unit76>
         <Filename Value="../../fbintf.fb4/client/2.5/FB25ClientAPI.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="662"/>
         <CursorPos X="42" Y="688"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit76>
       <Unit77>
         <Filename Value="runtest.sh"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="3"/>
         <CursorPos X="5" Y="32"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="Bash"/>
       </Unit77>
       <Unit78>
         <Filename Value="runtest.bat"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="19" Y="5"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="Bat"/>
       </Unit78>
       <Unit79>
@@ -608,29 +599,28 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="31"/>
         <CursorPos Y="53"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="Bat"/>
       </Unit79>
       <Unit80>
         <Filename Value="../../fbintf.fb4/testsuite/rundelphitest.bat"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="Bat"/>
       </Unit80>
       <Unit81>
         <Filename Value="rundelphitest.bat"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="19" Y="8"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="Bat"/>
       </Unit81>
       <Unit82>
         <Filename Value="/usr/share/fpcsrc/rtl/objpas/sysutils/sysstrh.inc"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="188"/>
         <CursorPos X="10" Y="203"/>
         <UsageCount Value="27"/>
-        <Loaded Value="True"/>
       </Unit82>
       <Unit83>
         <Filename Value="../../fbintf.fb4/testsuite/Test11.pas"/>
@@ -644,48 +634,48 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="25"/>
         <CursorPos X="41" Y="42"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit84>
       <Unit85>
         <Filename Value="../../fbintf.fb4/testsuite/testApp/TestApplication.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="821"/>
         <CursorPos X="3" Y="825"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit85>
       <Unit86>
         <Filename Value="../../fbintf.fb4/FBClientLib.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="21"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit86>
       <Unit87>
         <Filename Value="../../fbintf.fb4/client/FBClientAPI.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="198"/>
         <CursorPos Y="227"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit87>
       <Unit88>
         <Filename Value="../../fbintf.fb4/IB.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="1271"/>
         <CursorPos Y="1292"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit88>
       <Unit89>
         <Filename Value="../../fbintf.fb4/testsuite/Test1.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="121"/>
         <CursorPos X="35" Y="144"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit89>
       <Unit90>
         <Filename Value="../../../../fpcsrc/3.0.4/rtl/objpas/sysutils/sysstr.inc"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="957"/>
         <CursorPos Y="975"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit90>
       <Unit91>
         <Filename Value="../../ibx/runtime/nongui/IBCustomDataSet.pas"/>
@@ -736,7 +726,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="905"/>
         <CursorPos Y="922"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit97>
       <Unit98>
         <Filename Value="../client/3.0/firebird/Firebird4rc1.pas"/>
@@ -744,14 +734,14 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="6355"/>
         <CursorPos X="78" Y="6404"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit98>
       <Unit99>
         <Filename Value="../include/blr.inc"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="66"/>
         <CursorPos X="17" Y="82"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit99>
       <Unit100>
         <Filename Value="../include/consts_pub.inc"/>
@@ -763,7 +753,7 @@
       <Unit101>
         <Filename Value="../client/FBTimeUtils.pas"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit101>
       <Unit102>
         <Filename Value="../FBClientLib.pas"/>
@@ -783,7 +773,7 @@
         <Filename Value="../../ibx/runtime/nongui/IBInternals.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="32"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit104>
       <Unit105>
         <Filename Value="../../ibx/runtime/nongui/IBDatabase.pas"/>
@@ -798,7 +788,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="2594"/>
         <CursorPos Y="2623"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit106>
       <Unit107>
         <Filename Value="../client/3.0/firebird/Firebird4B1.pas"/>
@@ -806,7 +796,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="12948"/>
         <CursorPos Y="12980"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit107>
       <Unit108>
         <Filename Value="../client/3.0/firebird/Firebird3.pas"/>
@@ -814,14 +804,14 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="12667"/>
         <CursorPos X="33" Y="12680"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit108>
       <Unit109>
         <Filename Value="../../../../fpcsrc/3.2.0/rtl/inc/objpas.inc"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="40"/>
         <CursorPos Y="62"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit109>
       <Unit110>
         <Filename Value="../../../../fpcsrc/3.2.0/rtl/objpas/classes/stringl.inc"/>
@@ -971,19 +961,17 @@
       </Unit130>
       <Unit131>
         <Filename Value="../../../../../fpcsrc/3.2.2/rtl/inc/generic.inc"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="817"/>
         <CursorPos Y="837"/>
-        <UsageCount Value="13"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="12"/>
       </Unit131>
       <Unit132>
         <Filename Value="../../../../../fpcsrc/3.2.2/rtl/objpas/sysutils/sysstr.inc"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="960"/>
         <CursorPos Y="976"/>
         <UsageCount Value="12"/>
-        <Loaded Value="True"/>
       </Unit132>
       <Unit133>
         <Filename Value="FB4reference.log"/>
@@ -996,131 +984,25 @@
       <Unit134>
         <Filename Value="/usr/share/fpcsrc/rtl/objpas/math.pp"/>
         <UnitName Value="Math"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="1044"/>
         <CursorPos X="5" Y="1046"/>
         <UsageCount Value="11"/>
-        <Loaded Value="True"/>
       </Unit134>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="3" HistoryIndex="2">
       <Position1>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1569" Column="22" TopLine="1543"/>
+        <Filename Value="../client/FBArray.pas"/>
+        <Caret Line="557" Column="51" TopLine="532"/>
       </Position1>
       <Position2>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1479" Column="23" TopLine="1463"/>
+        <Filename Value="../client/FBArray.pas"/>
+        <Caret Line="99" Column="14" TopLine="84"/>
       </Position2>
       <Position3>
-        <Filename Value="../IBUtils.pas"/>
-        <Caret Line="652" Column="66" TopLine="639"/>
+        <Filename Value="../client/FBArray.pas"/>
+        <Caret Line="444" Column="3" TopLine="427"/>
       </Position3>
-      <Position4>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="565" Column="74" TopLine="553"/>
-      </Position4>
-      <Position5>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1170" Column="43" TopLine="1144"/>
-      </Position5>
-      <Position6>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="2112" Column="22" TopLine="2086"/>
-      </Position6>
-      <Position7>
-        <Filename Value="../IBUtils.pas"/>
-        <Caret Line="657" Column="22" TopLine="649"/>
-      </Position7>
-      <Position8>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="2508" Column="61" TopLine="2492"/>
-      </Position8>
-      <Position9>
-        <Filename Value="../client/FBSQLData.pas"/>
-      </Position9>
-      <Position10>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1569" Column="22" TopLine="1543"/>
-      </Position10>
-      <Position11>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1553" Column="14" TopLine="1543"/>
-      </Position11>
-      <Position12>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="165" Column="26" TopLine="159"/>
-      </Position12>
-      <Position13>
-        <Filename Value="../client/FBSQLData.pas"/>
-      </Position13>
-      <Position14>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="2967" Column="45" TopLine="2941"/>
-      </Position14>
-      <Position15>
-        <Filename Value="../client/FBMessages.pas"/>
-        <Caret Line="390" TopLine="365"/>
-      </Position15>
-      <Position16>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="2526" TopLine="2511"/>
-      </Position16>
-      <Position17>
-        <Filename Value="Test19.pas"/>
-        <Caret Line="510" TopLine="488"/>
-      </Position17>
-      <Position18>
-        <Filename Value="Test19.pas"/>
-        <Caret Line="399" TopLine="383"/>
-      </Position18>
-      <Position19>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="2526" TopLine="2511"/>
-      </Position19>
-      <Position20>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="2456" TopLine="2440"/>
-      </Position20>
-      <Position21>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="789" TopLine="773"/>
-      </Position21>
-      <Position22>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="718" TopLine="702"/>
-      </Position22>
-      <Position23>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="789" TopLine="773"/>
-      </Position23>
-      <Position24>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="717" Column="45" TopLine="702"/>
-      </Position24>
-      <Position25>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="111" Column="15" TopLine="111"/>
-      </Position25>
-      <Position26>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="525" Column="31" TopLine="523"/>
-      </Position26>
-      <Position27>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-      </Position27>
-      <Position28>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="176" Column="31" TopLine="150"/>
-      </Position28>
-      <Position29>
-        <Filename Value="../IBUtils.pas"/>
-        <Caret Line="1885" Column="3" TopLine="1865"/>
-      </Position29>
-      <Position30>
-        <Filename Value="../IBUtils.pas"/>
-        <Caret Line="1881" Column="81" TopLine="1867"/>
-      </Position30>
     </JumpHistory>
     <RunParams>
       <FormatVersion Value="2"/>
@@ -1140,7 +1022,6 @@
         <Item7 Value="-t 17"/>
         <Item8 Value="-t 16"/>
       </List1>
-      <List2 Name="WorkingDirectory" Type="File" Count="1"/>
     </HistoryLists>
   </ProjectSession>
 </CONFIG>
